--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -245,6 +245,8 @@
   </head>
 
   <body class="gradient">
+    
+    {%- render 'snippetexa' -%}
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
